manifests/ui/overlays/istio/destination-rule-ui.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ollama-ui
  labels:
    app: ollama-ui
spec:
  host: ollama-ui-service.kubeflow.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
