manifests/ui/overlays/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ollama-ui
  labels:
    app: ollama-ui
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - headers:
      request:
        add:
          x-forwarded-prefix: /ollama
    match:
    - uri:
        prefix: /ollama/
    rewrite:
      uri: /
    route:
    - destination:
        host: ollama-ui-service.kubeflow.svc.cluster.local
        port:
          number: 80
