manifests/ui/overlays/istio/network-policy.ui.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ollama-ui
  namespace: kubeflow
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values:
      - ollama-ui
  ingress:
  - from:
    - namespaceSelector:
        matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
          - istio-system
    - podSelector: {}
  policyTypes:
  - Ingress
